--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Git Demo</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
@@ -43,7 +44,13 @@
             </div>
         </div>
     </section>
-     
+<footer>
+        <p>
+            <a href="https://github.com/TTN-js/unforGITtable"> 参考项目 01</a> 
+        </p>
+</footer>
+
+
     <script src="js/script.js"></script> 
 </body>
 </html>
