change index.html lastflag

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <li></li>
                     <li></li>
                     <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>last_two</li>
+                    <li>last</li>
                 </ol>
             </div>
         </div>
