--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="accordion"><h1>Terminologys</h1></div>
             <div class="panel">
                 <ol>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
+                    <li>flag</li>
+                    <li>A</li>
                     <li></li>
                     <li></li>
+                    <li></li> 
                     <li></li>
                     <li></li>
                     <li></li>
@@ -30,16 +30,16 @@
         <div class="accordion"><h1>Basic Commands</h1></div>
             <div class="panel">
                 <ol>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>2</li>
                     <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
-                    <li>last_two</li>
-                    <li>last</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ol>
             </div>
         </div>
